--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=Gym-TFG
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=alextfg
+spring.datasource.password=alextfg
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.datasource.url=jdbc:h2:mem:gymmanagementdb
+server.port=8081
