--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,6 @@ spring.datasource.password=alextfg
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.datasource.url=jdbc:h2:mem:gymmanagementdb
+# Updates the database schema and initializes with data.sql at startup.
+spring.jpa.hibernate.ddl-auto=update
 server.port=8081
